--- a/index.html
+++ b/index.html
@@ -1,11 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Muhammad Rafsanjani</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  </head>
+
+  <script>
+    function toggleMenu() {
+      const navMenu = document.querySelector(".nav-menu");
+      navMenu.classList.toggle("active");
+    }
+  </script>
+  
+
+  <body>
+    <!-- header -->
+    <header>
+      <nav class="navbar">
+        <h2 class="logo">Rafs🤖n</h2>
+        <ul class="nav-menu">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">My Projects</a></li>
+          <li><a href="#footer">Contact Me</a></li>
+        </ul>
+        <div class="hamburger" onclick="toggleMenu()">
+          <img src="./assets/menuu.png" alt="Menu" />
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Hero -->
+      <section id="home" class="hero-section">
+        <div class="section-content">
+          <div class="hero-left">
+            <h2 class="title">Welcome to My Portfolio!</h2>
+            <h3 class="sub">
+              I’m thrilled to have you here. Dive into the projects and ideas
+              I’ve brought to life through the power of fullstack development.
+              From backend logic to pixel-perfect UI — this is where code meets
+              creativity.
+            </h3>
+            <div class="button">
+              <a href="#about" class="started">Get Started</a>
+            </div>
+          </div>
+          <div class="hero-right">
+            <img src="./assets/hero.png" alt="Hero" class="hero-image" />
+          </div>
+        </div>
+      </section>
+
+      <!-- About -->
+      <section id="about" class="about" data-aos="zoom-in">
+        <div class="about-content">
+          <div class="about-left" data-aos="flip-up" data-aos-duration="3000">
+            <img src="./assets/pf.jpeg" alt="Photo" />
+          </div>
+          <div class="about-right">
+            <h2 class="name">Hello Everyone!!!<br />I'm Muhammad Rafsanjani</h2>
+            <h3 class="caption">
+              I am a Fullstack Web Developer focused on developing effective and
+              efficient web applications. Involved in both frontend and backend,
+              I am committed to delivering solutions that optimally meet user
+              needs. I continuously keep up with technological advancements to
+              provide the best results in every project.
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <!-- Skills -->
+      <section id="skills" class="skills">
+        <div class="titleskill">
+          <h2 class="myskill">My Skills</h2>
+        </div>
+        <div class="logoskillwrapper">
+          <div class="logoskill">
+            <img src="./assets/html.png" alt="HTML" class="logo" />
+            <img src="./assets/css.png" alt="CSS" class="logo" />
+            <img src="./assets/js.png" alt="JavaScript" class="logo" />
+            <img src="./assets/react.svg" alt="React" class="logo" />
+            <img src="./assets/tail.svg" alt="Tailwind CSS" class="logo" />
+            <img src="./assets/node.png" alt="Node.js" class="logo" />
+            <img src="./assets/pg.png" alt="PostgreSQL" class="logo" />
+            <img src="./assets/ex.svg" alt="Express" class="logo" />
+            <img src="./assets/github.svg" alt="GitHub" class="logo" />
+            <img src="./assets/chatgpt.svg" alt="ChatGPT" class="logo" />
+            <!-- looping -->
+            <img src="./assets/html.png" alt="HTML" class="logo" />
+            <img src="./assets/css.png" alt="CSS" class="logo" />
+            <img src="./assets/js.png" alt="JavaScript" class="logo" />
+            <img src="./assets/react.svg" alt="React" class="logo" />
+            <img src="./assets/tail.svg" alt="Tailwind CSS" class="logo" />
+            <img src="./assets/node.png" alt="Node.js" class="logo" />
+            <img src="./assets/pg.png" alt="PostgreSQL" class="logo" />
+            <img src="./assets/ex.svg" alt="Express" class="logo" />
+            <img src="./assets/github.svg" alt="GitHub" class="logo" />
+            <img src="./assets/chatgpt.svg" alt="ChatGPT" class="logo" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects -->
+      <section id="projects" class="projects">
+        <div class="project-title">
+          <h2 class="myprojects">My Projects</h2>
+        </div>
+
+        <div class="project-content">
+          <div class="content" data-aos="zoom-out-right" data-aos-duration="2000">
+            <img src="./assets/applebot.png" alt="Applebot" class="project" />
+            <h3 class="protitle">AppleBot</h3>
+            <p class="pcontent">
+              Applebot is a project designed to help users find products in
+              specific categories. Applebot offers services such as a chatbot
+              for inquiries and product selection options. This project is built
+              using HTML, CSS, and JavaScript for the frontend, and Python is
+              used for the backend.
+            </p>
+          </div>
+          <div class="content" data-aos="zoom-out-up" data-aos-duration="2000">
+            <img src="./assets/buoy.png" alt="Buoy" class="project" />
+            <h3 class="protitle">Buoy U-TEWS</h3>
+            <p class="pcontent">
+              Buoy U-TEWS is a real-time monitoring project, with the actual
+              device implemented on Sebesi Island, Lampung Province, Indonesia.
+              This web application is built using the PERN stack and retrieves
+              sensor data via MQTT. It features real-time monitoring of sea
+              level, wind speed, wind direction, solar panel status, and GPS
+              location, along with real-time chart visualization.
+            </p>
+          </div>
+          <div class="content" data-aos="zoom-out-left" data-aos-duration="2000">
+            <img src="./assets/porto.png" alt="Porto" class="project" />
+            <h3 class="protitle">Portofolio</h3>
+            <p class="pcontent">
+              This is a personal portfolio project, created using only HTML and
+              CSS. The project was developed as both a personal portfolio and an
+              assignment for the bootcamp at Dibimbing.id.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Site footer -->
+    <footer id="footer" class="footer-basic">
+      <div>
+        <div class="social">
+          <a href="https://www.instagram.com/m_rafsanjani_/" target="_blank">
+            <img src="./assets/ig.png" alt="Instagram" class="icon-img" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/muhammad-rafsanjani-530686318/"
+            target="_blank"
+          >
+            <img src="./assets/link.png" alt="LinkedIn" class="icon-img" />
+          </a>
+          <a
+            href="https://mail.google.com/mail/?view=cm&fs=1&to=rafsanjani1719@gmail.com&su=Halo Rafsan"
+            target="_blank"
+          >
+            <img src="./assets/gmail.png" alt="Gmail" class="icon-img" />
+          </a>
+          <a href="https://github.com/rafsanjani21" target="_blank">
+            <img src="./assets/github.svg" alt="Github" class="icon-img" />
+          </a>
+        </div>
+        <p class="copyright">Muhammad Rafsanjani © 2025</p>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  </body>
 </html>
