--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
   <script>
@@ -19,7 +18,6 @@
       navMenu.classList.toggle("active");
     }
   </script>
-  
 
   <body>
     <!-- header -->
@@ -119,7 +117,11 @@
         </div>
 
         <div class="project-content">
-          <div class="content" data-aos="zoom-out-right" data-aos-duration="2000">
+          <div
+            class="content"
+            data-aos="zoom-out-right"
+            data-aos-duration="2000"
+          >
             <img src="./assets/applebot.png" alt="Applebot" class="project" />
             <h3 class="protitle">AppleBot</h3>
             <p class="pcontent">
@@ -142,7 +144,11 @@
               location, along with real-time chart visualization.
             </p>
           </div>
-          <div class="content" data-aos="zoom-out-left" data-aos-duration="2000">
+          <div
+            class="content"
+            data-aos="zoom-out-left"
+            data-aos-duration="2000"
+          >
             <img src="./assets/porto.png" alt="Porto" class="project" />
             <h3 class="protitle">Portofolio</h3>
             <p class="pcontent">
@@ -182,9 +188,9 @@
       </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </body>
 </html>
